TPCircularBufferClear assertion failure
0 libsystem_kernel.dylib 0x00007fff86529866 __pthread_kill 10
1 libsystem_pthread.dylib 0x00007fff8f49035c pthread_kill 92
2 libsystem_c.dylib 0x00007fff866f4bba abort 125
3 libsystem_c.dylib 0x00007fff866bea5f __assert_rtn 321
4 libauhal_plugin.dylib 0x00000001053ab292 TPCircularBufferClear 82
5 libvlccore.7.dylib 0x0000000100076137 aout_DecFlush 39
6 libvlccore.7.dylib 0x000000010004cbcc DecoderThread 3164
Application Specific Information:
Assertion failed: (buffer->fillCount >= 0), function TPCircularBufferConsume, file ../../../extras/package/macosx/../../../modules/audio_output/TPCircularBuffer.h, line 99.
Mostly 10.9 specific. This apparently happens a lot while I don't have a safe reproduction way yet.