auhal: prevent assertion failure on TPCircularBufferClear (close #10109)